--- a/index.html
+++ b/index.html
@@ -56,11 +56,8 @@
     <main class="main-container main-index">
       <div class="page-container">
         <h1 class="visually-hidden">Город Седона</h1>
-        <div class="logo-background1">
-          <div class="logo-background2">
-            <div class="logo-background3">
-            </div>
-          </div>
+        <div class="intro">
+          <img src="img/welcome.svg" class="intro__text" height="352px" alt="Welcome to the gorgeous Sedona, because the grand canyon sucks!" />
         </div>
         <section class="general">
           <p class="general-about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
